überarbeitete Übungen 4, 5 und 6
Übungs 4:

Erstellung einer mehrseitigen Web Site, die aus einer mehrstufigen
Navigationsleiste, und mind mehreren Unterseiten  besteht.  Einige
Unterseiten sind in 2-3 Ebenen gegliedert (also H1 bis H3) und zeigen
Fließtext mit mehreren Paragraphen pro Abschnitt auf.  Das
Navigationsleiste bietet Links sowohl auf die Unterseiten als auch auf
Elemente wie Bilder, PDFs und Unterseiten, die in den Unterseitenliegen.

Übungs 5:

Umbau der in Übung 4 erstellten Website  in eine Multiframe-Darstellung.
Dabei soll der Content wiederverwendet und in zwei alternative
Frame-Layouts eingebettet werden, ohne, dass der Content redundant
gespeichert werden muss.

Übung 6:

Ergänzung der  Website durch eine zentrale CSS-Datei, um eine
einheitliche Formatierung (vgl. Corporate Design) zu gewährleisten.
Ergänzung  Website durch eine zusätzliche CSS-Datei, um das div-Layout
zu beschreiben.

--- a/Uebung6/Uebung4/index.html
+++ b/Uebung6/Uebung4/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="stylesheet/design.css">
     <title>Web Technologien Uebungen </title>
   </head>
   
   <body>
    <h1> Hochschule der Medien - Stuttgart </h1>
-   <h2> Modul: Web Technologie </h2>
+   <h2 id="unter"> Modul: Web Technologie </h2>
     <hr>
 	  
    <nav>
@@ -35,27 +36,26 @@
 	  <hr>
 	  
 	   <h3>HTML und CSS</h3>
-      <li><a href="https://www.html-seminar.de/html-grundlagen.htm">Einfuehrung</a>
 		<ul>
+		<li><a href="https://www.html-seminar.de/html-grundlagen.htm">Einfuehrung</a></li>
           <li><a href="Uebung04.html">Uebungsblatt 4</a></li>
           <li><a href="Uebung05.html">Uebungsblatt 5</a></li>
           <li><a href="Uebung06.html">Uebungsblatt 6</a></li>
         </ul>
-		</li>
 	 <hr>
 
 	 <h3>Graphische Benutzungsschnittellen</h3>
 	 <ul>
-      <li><p><a href="http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox">GWT</a>...Informationen über die Nutzung von GWT</p></li>
+      <li><a href="http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox">GWT</a></li>
 	 </ul>
 <hr>	
   
 	  <h3>Source Code Management</h3>
 	  <ul>
-	  <li><p><a href="https://rogerdudler.github.io/git-guide/index.de.html">Git</a>....Informationen über die Nutzung von GIT</p></li>
+	  <li><a href="https://rogerdudler.github.io/git-guide/index.de.html">Git</a></li>
   </ul>
   <hr>
 </nav>
-    <h3> Impressum: Hochschule der Medien, Nobelstrasse 10,  70569 Stuttgart, Telefon: 0711 8923 10 (Zentrale)  </h3>
+    <h3 id="impressum"> Impressum: Hochschule der Medien, Nobelstrasse 10,  70569 Stuttgart, Telefon: 0711 8923 10 (Zentrale)  </h3>
   </body>
 </html>
