--- a/Uebung5/Uebung05.html
+++ b/Uebung5/Uebung05.html
@@ -3,29 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="design/styles.css" type="text/css" />
+
     <title>Web Technologien Uebungen </title>
   </head>
   
   
   <body>
+  
+  <div id="form">
+<div class="c4">
+</div>
+
+
+<div id="header">
+<img src="images/head.jpg" alt="Foto" border="0" width="945" height="280" />
+  </div>
+  
+  <div id="content">	
    		
 		  <h2> Cascading Style Sheets </h2>
 
 		
-		<pre>
-			
+		<p>
+		<br>
 			Cascading Style Sheets (englische Aussprache [kæsˌkeɪdɪŋˈstaɪlʃiːts]; für gestufte Gestaltungsbögen),
 			kurz CSS genannt, ist eine Stylesheet-Sprache für elektronische Dokumente 
 			und zusammen mit HTML und DOM eine der Kernsprachen des World Wide Webs.
-			
-			
-   </pre> 
+			<br>
+<br>
+<br>
+<br>
+   </p> 
 		
 		
-		<p><a href="mitterechts.html">Zurück</a>  zur Hauptseite</p>
+		<p><a href="index.html">Zurück</a>  zur Hauptseite</p>
 		
-
-   
+ </div>
+   </div>
   
   </body>
 </html>
