--- a/Uebung5/Uebungsblatt1.html
+++ b/Uebung5/Uebungsblatt1.html
@@ -3,19 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="design/styles.css" type="text/css" />
+
     <title>Web Technologien Uebungen </title>
   </head>
   <body>
   
+  <div id="form">
+<div class="c4">
+</div>
+
+<div id="header">
+<img src="images/head.jpg" alt="Foto" border="0" width="945" height="280" />
+  </div>
+  
+  <div id="content">	
+  
   <h2> Uebungsblatt 1</h2>
 		
-		<object data="content/Uebung01.pdf" type="application/pdf" style="width:70%;height:450px">
+		<object data="content/Uebung01.pdf" type="application/pdf" style="width:100%;height:450px">
 		</object>
 		
 		
 		<p><a href="AusnahmenundFehler.html">Zurück</a>  zu Ausnahmen und Exceptions</p>
 
-		<p><a href="mitterechts.html">Zurück</a>  zur Hauptseite</p>
-	
+		<p><a href="index.html">Zurück</a>  zur Hauptseite</p>
+		
+		 </div>
+	</div>
   </body>
 </html>
