--- a/Uebung6/Uebung5/Uebung04.html
+++ b/Uebung6/Uebung5/Uebung04.html
@@ -3,28 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="stylesheet/design.css">
+	<link rel="stylesheet" href="design/styles.css" type="text/css" />
+
     <title>Web Technologien Uebungen </title>
   </head>
   <body>
   
+  <div id="form">
+<div class="c4">
+</div>
+
+
+<div id="header">
+<img src="images/head.jpg" alt="Foto" border="0" width="945" height="280" />
+  </div>
+  
+  <div id="content">	
+  
     <h2> HTML </h2>
+	
 
    		
-		<pre>
-			
+		<p>
+		<br>
+		<br>
 			Die Hypertext Markup Language (englisch für Hypertext-Auszeichnungssprache), 
 			abgekürzt HTML, ist eine textbasierte Auszeichnungssprache zur Strukturierung 
 			digitaler Dokumente wie Texte mit Hyperlinks, Bildern und anderen Inhalten.
-			
-			
-   </pre> 
+<br>
+<br>
+<br>
+<br>			
+   </p> 
 		
 		
-		<p><a href="mitterechts.html">Zurück</a>  zur Hauptseite</p>
+		<p><a href="index.html">Zurück</a>  zur Hauptseite</p>
 		
 
-   
-  
+    </div>
+  </div>
   </body>
 </html>
