--- a/Uebung6/Uebung5/Uebung06.html
+++ b/Uebung6/Uebung5/Uebung06.html
@@ -3,49 +3,64 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="stylesheet/design.css">
+	<link rel="stylesheet" href="design/styles.css" type="text/css" />
+
     <title>Web Technologien Uebungen </title>
   </head>
   <body>
   
+  <div id="form">
+<div class="c4">
+</div>
+  
+  
+  <div id="header">
+<img src="images/head.jpg" alt="Foto" border="0" width="945" height="280" />
+  </div>
+  
+  <div id="content">	
+  
+  
     <h2> HTML-Frame-Technik </h2>
-   		
-		<p><a href="https://de.wikipedia.org/wiki/Frame_(HTML)">HTML FRAME</a>  Technik</p>
+   		<br>
+		<p><a href="https://de.wikipedia.org/wiki/Frame_(HTML)">HTML FRAME</a> Technik</p>
 		
 	<p>
-			
-			
-			Ein Frame ist ein Teilbereich einer HTML-Seite, in dem eine andere <br>
-			HTML-Seite transkludiert werden kann. Das einzelne Segment wird dabei als Frame <br>
-		    (dt. Rahmen) bezeichnet, die Definition aller Frames als Frameset.Die Frame-Technik <br>
-			wurde von Netscape im Navigator 2.0 eingeführt und wird heute von den meisten <br>
-			Browsern unterstützt. Das W3C hat Framesets in den Versionen HTML 4.0 und XHTML 1.0 standardisiert. <br>
+	<br>
+			Ein Frame ist ein Teilbereich einer HTML-Seite, in dem eine andere HTML-Seite transkludiert werden kann. 
+			Das einzelne Segment wird dabei als Frame (dt. Rahmen) bezeichnet, die Definition aller Frames als Frameset.
+<br>
+			Die Frame-Technik wurde von Netscape im Navigator 2.0 eingeführt und wird heute von 
+			den meisten Browsern unterstützt. Das W3C hat Framesets in den Versionen HTML 4.0 und XHTML 1.0 standardisiert. 
 			In HTML5 wird die Frame-Technik nicht übernommen.<br>
-			<br>
-			Ein Vorteil ist die Möglichkeit zur parallelen Darstellung mehrerer Einzeldokumente.<br>
-			Dadurch lässt sich die vom Webserver zum Webbrowser übertragene Datenmenge reduzieren und<br>
-			es wird eine Modularisierung einer Website ohne serverseitige Techniken möglich. So lässt <br>
-			sich beispielsweise die Navigation zentral in einem HTML-Dokument<br>
+			
+			Ein Vorteil ist die Möglichkeit zur parallelen Darstellung mehrerer Einzeldokumente. Dadurch lässt sich die 
+			vom Webserver zum Webbrowser übertragene Datenmenge reduzieren und es wird eine Modularisierung einer Website 
+			ohne serverseitige Techniken möglich. So lässt sich beispielsweise die Navigation zentral in einem HTML-Dokument
 			verwalten und muss nicht auf jeder neuen Seite eingefügt werden.<br>
+
+			Ein weiterer Vorteil ist, dass nur der jeweils gerade aktuelle Frame gescrollt wird, während andere Frames davon
+			unbeeinflusst sind. So lässt sich beispielsweise ein Inhaltsframe scrollen, während die Navigation und andere 
+			wichtige Bereiche im jeweils eigenen Frame nicht mit scrollen.<br>
+
+			Vorteilhaft ist zudem, dass sich über Frames problemlos Inhalte aus unterschiedlichen Quellen bzw. aus 
+			verschiedenen Webanwendungen miteinander kombinieren lassen. So könnten Ergebnisse einer Webanwendung in einem Frame 
+			in einem anderen Frame angezeigt werden.
 			<br>
-			Ein weiterer Vorteil ist, dass nur der jeweils gerade aktuelle Frame gescrollt wird, während <br>
-			andere Frames davon unbeeinflusst sind. So lässt sich beispielsweise ein Inhaltsframe scrollen,<br>
-			während die Navigation und andere wichtige Bereiche im jeweils eigenen Frame nicht mit scrollen.<br>
-			<br>
-			Vorteilhaft ist zudem, dass sich über Frames problemlos Inhalte aus unterschiedlichen <br>
-			Quellen bzw. aus verschiedenen Webanwendungen miteinander kombinieren lassen. So könnten<br>
-			Ergebnisse einer Webanwendung in einem Frame in einem anderen Frame angezeigt werden.<br>
-			<br>
+<br>
+<br>
+<br>
+			
 			
    </p> 
 		
 		
 		
 		
-		<p><a href="mitterechts.html">Zurück</a>  zur Hauptseite</p>
+		<p><a href="index.html">Zurück</a>  zur Hauptseite</p>
 		
 
-   
-  
+    </div>
+  </div>
   </body>
 </html>
