--- a/Uebung6/Uebung5/gruppeneinteilung.html
+++ b/Uebung6/Uebung5/gruppeneinteilung.html
@@ -3,17 +3,34 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="stylesheet/design.css">
+	<link rel="stylesheet" href="design/styles.css" type="text/css" />
+
     <title>Web Technologien Uebungen </title>
   </head>
   <body>
-  
+  <div id="form">
+<div class="c4">
+</div>
+
+<div id="header">
+<img src="images/head.jpg" alt="Foto" border="0" width="945" height="280" />
+  </div>
+
+  <div id="content">	
   <h2> Gruppeneinteilung </h2>
+		<br>
+		<p><a href="bild/1.jpg">Zur</a> Gruppe 1</p>
+		<br>
+		<p><a href="bild/2.jpg">Zur</a> Gruppe 2</p>
+		<br>
+		<p><a href="bild/3.jpg">Zur</a> Gruppe 3</p>
+		<br>
+		<p><a href="index.html">Zurück</a>  zur Hauptseite</p>
+		<br>
 		
-		<p><a href="content/1.jpg">Zur</a> Gruppe 1</p>
-		<p><a href="content/2.jpg">Zur</a> Gruppe 2</p>
-		<p><a href="content/3.jpg">Zur</a> Gruppe 3</p>
-		<p><a href="mitterechts.html">Zurück</a>  zur Hauptseite</p>
-	
+	</div>		
+		
+		</div>
+	 </div>
   </body>
 </html>
