--- a/Uebung6/Uebung5/AusnahmenundFehler.html
+++ b/Uebung6/Uebung5/AusnahmenundFehler.html
@@ -3,12 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="stylesheet/design.css">
+	<link rel="stylesheet" href="design/styles.css" type="text/css" />
+
     <title>Web Technologien Uebungen </title>
   </head>
-  <body >
+  <body>
   
-  <h2> Ausnahmen und Fehler </h2>
+  <div id="form">
+	<div class="c4">
+	</div>
+  
+  <div id="header">
+<img src="images/head.jpg" alt="Foto" border="0" width="945" height="280" />
+  </div>
+		
+	<div id="content">	
+	
+	<h2> Ausnahmen und Fehler </h2>
 		
 		<p>Exception Handling wird ins Deutsche als Behandlung von Ausnahmen übersetzt.<br> 
 		Mit Ausnahmen sind Fehlersituationen gemeint, die in einem Programm während der Ausführung <br>
@@ -19,14 +30,33 @@
 		die fehlschlagen können und zu Ausnahmesituationen führen können. <br>
 		Wie auf derartige Ausnahmen reagiert wird, erfahren Sie in diesem Kapitel.</p>
 		
-		<div  class="frame">
-		<iframe src="content/ExceptionsScript.pdf" >
+		<iframe src="content/ExceptionsScript.pdf" width="100%" height="450px">
 		</iframe>
-		</div>
+		
 		
 	    <p><a href="Uebungsblatt1.html">Zum</a>  Übungsblatt 1</p>
 
-		<p><a href="mitterechts.html">Zurück</a>  zur Hauptseite</p>
+		<p><a href="index.html">Zurück</a>  zur Hauptseite</p>
+		
+	</div>
 	
+	
+	<div id="footer">
+<br />
+&copy; 2017 | Hochschule der Medien Stuttgart | Telefon: 0711-8894512 | E-Mail: info@hdm-stuttgart.de &nbsp;&nbsp; | &nbsp;&nbsp;Webseite: <a href="https://www.hdm-stuttgart.de/">www.hdm-stuttgart.de</a>
+<br />
+<br />
+
+</div>
+<div id="footer2">
+<img src="images/facebook.png" alt="Grafik"  /> <img src="images/twitter.png" alt="Grafik"   />  <img src="images/google.png" alt="Grafik"   />
+
+
+<!-- Ende Footer -->
+
+</div>
+</div>
+	
+	</div>
   </body>
 </html>
